src/objects/QPMS__Supplier_General_Task__c.object
<CustomObject>
    <description>This is generic workflow object which will be used in Supplier Quality Management module. All tasks record types are part of this object.</description>
    <fields>
        <fullName>QPMS__AdhocTask_Title__c</fullName>
        <description>holds AdhocTask Title</description>
        <label>AdhocTask Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <description>Adhoc Task sequence numbers</description>
        <label>Adhoc Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <description>Age</description>
        <formula>TEXT(TODAY() - DATEVALUE( CreatedDate )
)</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>This field is used This field is used to store Allowed Days value</description>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>This field is used to store Approval Process value</description>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change DueDate</fullName>
                </value>
                <value>
                    <fullName>Task Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>This field is used to store  Approval Group value</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store Approval Process Complete value</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <description>This field is used to store Approval Required value</description>
        <label>Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Approval process</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Approval process</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Approval process</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Tasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Comments__c</fullName>
        <description>This field is used to store Approver Comments</description>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Approval process</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Tasks10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>This field is used to store Approval Status for Change Owner and Due date</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Closure_Comment__c</fullName>
        <description>This field is used to store Closure Comment for Closure Task</description>
        <label>Closure Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By_Name__c</fullName>
        <description>holds Completed By Name</description>
        <formula>IF( ISBLANK( QPMS__Completed_By__c ) ,&apos;&apos;, QPMS__Completed_By__r.LastName &amp; &quot;, &quot; &amp; QPMS__Completed_By__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Completed By value</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Tasks_CompletedBY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>This field is used to store  Completed Date</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to store approver secquence which used in sequential approval process</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This field is used to store Due Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Initial Submitter Used in Approval Process</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_TasksNhbn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Initiating Site Security</description>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiation Site To Which user belongs to</description>
        <inlineHelpText>Initiation Site To Which user belongs to</inlineHelpText>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Supplier General Tasks</relationshipLabel>
        <relationshipName>Supplier_General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>This field is used to store Proposed due date used in change duedate Approval process</description>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds New Owner value</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_New_Tasks_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_DueDate__c</fullName>
        <description>to display the note to approver for due date</description>
        <label>Note To Approver DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner/DueDate</description>
        <label>Note To Approver Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>holds Note To Approver value</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds Owner value</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_TasksvLP5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Owner of Supplier General Task</description>
        <label>ParentOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reassign_To__c</fullName>
        <description>holds Reassign To value</description>
        <label>Reassign To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Delegator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Rejection_Comments__c</fullName>
        <description>holds Rejection Comments</description>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sequence in which task should be performed.</description>
        <inlineHelpText>Sequence in which task should be performed. For example, if value is &apos;3&apos; then tasks with sequence numbers &apos;1&apos; and &apos;2&apos; should be performed first.</inlineHelpText>
        <label>Sequence Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>holds Sequence value</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>holds Signed-off By value</description>
        <label>Signed-off By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Pending ActionPlan</fullName>
                </value>
                <value>
                    <fullName>Disposition Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Summary__c</fullName>
        <description>Summary</description>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Change</description>
        <label>Supplier Change</label>
        <referenceTo>QPMS__Supplier_Change__c</referenceTo>
        <relationshipLabel>Supplier General Tasks</relationshipLabel>
        <relationshipName>Supplier_General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_Summary__c</fullName>
        <description>Task Summary</description>
        <label>Task Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>Task Title to display tasks</description>
        <label>Task Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__UniqueId__c</fullName>
        <description>Internal field this field used to store task template id where it is used when configuration workflow is disabled</description>
        <label>UniqueId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to store locked value used in Approval process</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmitted__c</fullName>
        <description>This field is used to store Submitted value used in Approval process</description>
        <label>isSubmitted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supplier General Task</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SGT-{0000}</displayFormat>
        <label>Supplier General Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier General Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__AdhocTask</fullName>
        <active>true</active>
        <label>AdhocTask</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>QPMS__Allowed_days_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(QPMS__Allowed_Days__c)</errorConditionFormula>
        <errorDisplayField>QPMS__Allowed_Days__c</errorDisplayField>
        <errorMessage>Allowed days is required</errorMessage>
    </validationRules>
</CustomObject>